--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body onload="getReady();">
   <p>Say hello to my little charity Christmas quiz. This year, eat humbugs — each answer is an anti-xmas 'baddie'. Most of the answers are made up of the one- or two-syllable picture clues, which you put together to get the answer. Some of the clues are pretty ropey which is fine, I promise.</p>
   <p>Tips: get a diverse team if you want a good chance; after all, nobody knows about Christmas, rubbish AI films <em>and</em> persistent primary storage on a computer. Talk through your thoughts out loud with your family or friends or online and gasp as the answers emerge from your hive mind. <strong>Don't try to do them all in order</strong>.</p>
-  <p>To comment on the quiz and donate, moan (and donate), say thanks (and donate) or just donate, please do so <a href="https://www.justgiving.com/page/dave-edwards-1702151473425" target="_blank" rel="noopener noreferrer">here</a>. This year, any donations will go to UNHCR, so if you have a roof and food, then please consider chipping in.</p>
+  <p>To comment on the quiz and donate, moan (and donate), say thanks (and donate) or <a href="https://www.justgiving.com/page/dave-edwards-1702151473425" target="_blank" rel="noopener noreferrer"></a>just donate, please do so here</a>. This year, any donations will go to UNHCR, so if you have a roof and food, then please consider chipping in.</p>
   <p>Please share far and wide on your WhatsApps, Discords, Exes and Facebooks etc.</p>
   <p>Dave 🎅</p>
   <p>PS please consider this your non-transferrable Christmas card.</p>
