--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <p>Please share far and wide on your WhatsApps, Discords, Exes and Facebooks etc.</p>
   <p>Dave 🎅</p>
   <p>PS please consider this your non-transferrable Christmas card.</p>
-  <p>PPS alt text FTW — a11y for everyone.</p>
+  <p>PPS please use meaningful alt text on your images.</p>
   
   <div id="q0" class="row">
     1
