--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
     1
     <img src="" alt="">
     <div class="item">
-      <img src="transparent-spacer.png" alt="">
+      Play online: ludlowcode.github.io/xmas23
+      <img src="qrcode_ludlowcode.github.io.png" alt="">
     </div>
     <div class="item">
       <img src="Tennel_Cheshire_proof-rule.png"
         alt="The Cheshire cat with a stainless steel rule superimposed on top. The face seems to be about 30 millimetres wide.">
     </div>
     <div class="item">
-      <img src="transparent-spacer.png" alt="">
+      Donate to refugees (UNHCR):
+      <img src="qrcode_www.justgiving.com.png" alt="">
     </div>
   </div>
   <div id="q1" class="row">
