--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <script src="script.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" id = "style">
 </head>
 
 <body onload="getReady();">
@@ -9,22 +9,25 @@
   <p>To comment on the quiz and donate, moan (and donate), say thanks (and donate) or <a href="https://www.justgiving.com/page/dave-edwards-1702151473425" target="_blank" rel="noopener noreferrer">just donate, please do so here</a>. This year, any donations will go to UNHCR, so if you have a roof and food, then please consider chipping in.</p>
   <p>Please share this widely.</p>
   <p>Dave 🎅 PS please consider this your non-transferrable Christmas card.</p>
+  <p onclick="makePrinty()">🖨</p>
   
   <div id="q0" class="row">
-    1
+    
     <div class="item">
-      <img src="playQR.png" alt="">
+      <img src="find-the-baddies.png" alt="">
     </div>
+    <div class = "label">1</div>
     <div class="item">
+      
       <img src="Tennel_Cheshire_proof-rule.png"
         alt="The Cheshire cat with a stainless steel rule superimposed on top. The face seems to be about 30 millimetres wide.">
     </div>
     <div class="item">
-      <img src="donateQR.png" alt="">
+      <img src="playQR.png" alt="">
     </div>
   </div>
   <div id="q1" class="row">
-    2
+    <div class = "label">2</div>
     <div class="item">
       <img src="love-still-around.png" alt="Love Is All Around has 33% buffered...">
     </div>
@@ -39,29 +42,32 @@
     </div>
   </div>
   <div id="q2" class="row">
-    3
+    <div class = "label">3</div>
     <div class="item">
       <img src="mister.jpg" alt="Fine spraying device.">
     </div>
     <div class="item">
       <img src="tik-tok-ceramicist.webp" alt="Bespectacled student throuwing a pot on a wheel.">
     </div>
+    <div class="item">
+      <img src="donateQR.png" alt="">
+    </div>
   </div>
   <div id="q3" class="row">
-    4
+    <div class = "label">4</div>
     <div class="item">
-      <img src="transparent-spacer.png" alt="">
+      <img src="transparent-spacer-squarest.png" alt="">
     </div>
     <div class="item">
       <img src="MJ-album-father-christmas.png"
         alt="On a Black and white album cover, Michael Jackson is wearing a red hat.">
     </div>
     <div class="item">
-      <img src="transparent-spacer.png" alt="">
+      <img src="donate-text.png" alt="">
     </div>
   </div>
   <div id="q4" class="row">
-    5
+    <div class = "label">5</div>
     <div class="item">
       <img src="mr-solos-companions.png"
         alt="Abourd the Milleniun Falcon, Chewwy, Leia, C3P0 and Luke are circled, sat around the captain.">
@@ -72,7 +78,7 @@
     </div>
   </div>
   <div id="q5" class="row">
-    6
+    <div class = "label">6</div>
     <div class="item">
       <img src="convex-meniscus.png" alt="A glass with water to the brim.">
     </div>
@@ -87,7 +93,7 @@
     </div>
   </div>
   <div id="q6" class="row">
-    7
+    <div class = "label">7</div>
     <div class="item">
       <img src="film-with-scarlett-phoenix.jpg"
         alt="Film still where Joaquin Phoenix's character is having an earnest conversation with a scarlett computer screen.">
@@ -97,19 +103,19 @@
     </div>
   </div>
   <div id="q7" class="row">
-    8
+    <div class = "label">8</div>
     <div class="item">
-      <img src="transparent-spacer.png" alt="">
+      <img src="transparent-spacer-squarest.png" alt="">
     </div>
     <div class="item">
       <img src="miaoww.png" alt="Cat footballer having lactic acid stretched out.">
     </div>
     <div class="item">
-      <img src="transparent-spacer.png" alt="">
+      <img src="transparent-spacer-squarest.png" alt="">
     </div>
   </div>
   <div id="q8" class="row">
-    9
+    <div class = "label">9</div>
     <div class="item">
       <img src="ms-oil.png" alt="Popeye the sailor and Bluto compete to woo her.">
     </div>
@@ -125,7 +131,7 @@
     </div>
   </div>
   <div id="q9" class="row">
-    10
+    <div class = "label">10</div>
     <div class="item">
       <img src="ERB.webp"
         alt="England women's first black player, world cup winner, and Lambeth and Surrey legend is probably talking sense into her mic.">
