--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <p>Say hello to my little charity Christmas quiz. This year, eat humbugs — each answer is an anti-xmas 'baddie'. Most of the answers are made up of the one- or two-syllable picture clues, which you put together to get the answer. Some of the clues are pretty ropey which is fine, I promise.</p>
   <p>Tips: get a diverse team if you want a good chance; after all, nobody knows about Christmas, rubbish AI films, <em>and</em> cricketing royalty. <strong>Don't try to do them all in order</strong>.</p>
   <p>To comment on the quiz and donate, moan (and donate), say thanks (and donate) or <a href="https://www.justgiving.com/page/dave-edwards-1702151473425" target="_blank" rel="noopener noreferrer">just donate, please do so here</a>. This year, any donations will go to UNHCR, so if you have a roof and food, then please consider chipping in.</p>
-  <p>Please share this widely.</p>
-  <p>Dave 🎅 PS please consider this your non-transferrable Christmas card.</p>
-  <p onclick="makePrinty()">🖨</p>
+  <p>Please share this widely. Dave 🎅 PS please consider this your non-transferrable Christmas card.</p>
+  <p onclick="makePrinty()">🖨Printable version🖨</p>
   
   <div id="q0" class="row">
     
