--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+  <title>Xmas baddies picture quiz</title>
   <script src="script.js"></script>
   <link rel="stylesheet" href="style.css" id = "style">
 </head>
