--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div id="q1" class="row">
     2
     <div class="item">
-      <img src="love-still-around.png" alt="Love Is All Around has 33% buffered...">
+      <img src="marti-and-co.png" alt="Love Is All Around has 33% buffered...">
     </div>
     <div class="item">
       <img src="bob-dylan-and-co.png" alt="A young Bob Dylan is recording with his fellow musicians.">
@@ -90,6 +90,10 @@
   <div id="q6" class="row">
     7
     <div class="item">
+      <img src="MLK.jpg"
+        alt="Civil rights leader MLK making a speech.">
+    </div>
+    <div class="item">
       <img src="film-with-scarlett-phoenix.jpg"
         alt="Film still where Joaquin Phoenix's character is having an earnest conversation with a scarlett computer screen.">
     </div>
@@ -128,14 +132,14 @@
   <div id="q9" class="row">
     10
     <div class="item">
-      <img src="ERB.webp"
-        alt="England women's first black player, world cup winner, and Lambeth and Surrey legend is probably talking sense into her mic.">
+      <img src="b-flat.png"
+        alt="Closeup of an old piano. A B-flat key is indicated">
     </div>
     <div class="item">
       <img src="french-pianist.png" alt="Coolish black-and-white album cover featuring a smoking old pianiste.">
     </div>
     <div class="item">
-      <img src="cool-stunt-bro-2.png" alt="A 60-something actor is doing a stunt hanging from a chopper.">
+      <img src="Tom-C.jpg" alt="Dude from Top Gun posing in some aviator shades.">
     </div>
   </div>
   <footer><p>Thanks to everyone who has helped, especially the Y13 A-level class, <a href="https://9elements.com/blog/building-a-combined-css-aspect-ratio-grid/">Nils Binder</a> and <a href="https://www.shecodes.io/athena/22284-how-to-scale-images-with-different-sizes-in-a-css-grid#:~:text=If%20your%20pictures%20have%20different,resized%20to%20fit%20its%20container.">shecodes' Athena</a> for their sweet CSS which I have stolen and mangled, and the non-litigious and laudably charitable photographers and film studios. Issues etc, please go to the GitHub <a href="https://github.com/LudlowCode/anti-xmas">repo</a>.</p></footer>
