--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class = "label">1</div>
     <div class="item">
       
-      <img src="Tennel_Cheshire_proof-rule.png"
+      <img src="Tennel_Cheshire_proof-rule.jpg"
         alt="The Cheshire cat with a stainless steel rule superimposed on top. The face seems to be about 30 millimetres wide.">
     </div>
     <div class="item">
@@ -29,16 +29,16 @@
   <div id="q1" class="row">
     <div class = "label">2</div>
     <div class="item">
-      <img src="marti-and-co.png" alt="Love Is All Around has 33% buffered...">
+      <img src="marti-and-co.jpg" alt="Love Is All Around has 33% buffered...">
     </div>
     <div class="item">
-      <img src="bob-dylan-and-co.png" alt="A young Bob Dylan is recording with his fellow musicians.">
+      <img src="bob-dylan-and-co.jpg" alt="A young Bob Dylan is recording with his fellow musicians.">
     </div>
     <div class="item">
       <img src="tim-curry-pennywise.jpg" alt="Tim Curry as a sinister clown.">
     </div>
     <div class="item">
-      <img src="Bill-pennywise.png" alt="Bill Skarsgård is a younger and scarier version of the same clown.">
+      <img src="Bill-pennywise.jpg" alt="Bill Skarsgård is a younger and scarier version of the same clown.">
     </div>
   </div>
   <div id="q2" class="row">
@@ -59,7 +59,7 @@
       <img src="transparent-spacer-squarest.png" alt="">
     </div>
     <div class="item">
-      <img src="MJ-album-father-christmas.png"
+      <img src="MJ-album-father-christmas.jpg"
         alt="On a Black and white album cover, Michael Jackson is wearing a red hat.">
     </div>
     <div class="item">
@@ -69,7 +69,7 @@
   <div id="q4" class="row">
     <div class = "label">5</div>
     <div class="item">
-      <img src="mr-solos-companions.png"
+      <img src="mr-solos-companions.jpg"
         alt="Abourd the Milleniun Falcon, Chewwy, Leia, C3P0 and Luke are circled, sat around the captain.">
     </div>
     <div class="item">
@@ -80,16 +80,16 @@
   <div id="q5" class="row">
     <div class = "label">6</div>
     <div class="item">
-      <img src="convex-meniscus.png" alt="A glass with water to the brim.">
+      <img src="convex-meniscus.jpg" alt="A glass with water to the brim.">
     </div>
     <div class="item">
-      <img src="1000kg-weight.png" alt="A metal 1000kg weight.">
+      <img src="1000kg-weight.jpg" alt="A metal 1000kg weight.">
     </div>
     <div class="item">
       <img src="what-colour.png" alt="RGB Colour wheel with #00ff00 indicated.">
     </div>
     <div class="item">
-      <img src="cheese-separation.png" alt="The liquid section of a cheese manufacturing process is indicated.">
+      <img src="cheese-separation.jpg" alt="The liquid section of a cheese manufacturing process is indicated.">
     </div>
   </div>
   <div id="q6" class="row">
@@ -112,7 +112,7 @@
       <img src="transparent-spacer-squarest.png" alt="">
     </div>
     <div class="item">
-      <img src="miaoww.png" alt="Cat footballer having lactic acid stretched out.">
+      <img src="miaoww.jpg" alt="Cat footballer having lactic acid stretched out.">
     </div>
     <div class="item">
       <img src="transparent-spacer-squarest.png" alt="">
@@ -121,10 +121,10 @@
   <div id="q8" class="row">
     <div class = "label">9</div>
     <div class="item">
-      <img src="ms-oil.png" alt="Popeye the sailor and Bluto compete to woo her.">
+      <img src="ms-oil.jpg" alt="Popeye the sailor and Bluto compete to woo her.">
     </div>
     <div class="item">
-      <img src="not-baltimores-finest-narc.png"
+      <img src="not-baltimores-finest-narc.jpg"
         alt="Baltimore's finest fictional cops. Carver's incompetent bald partner is indicated.">
     </div>
     <div class="item">
@@ -141,7 +141,7 @@
         alt="Closeup of an old piano. A B-flat key is indicated">
     </div>
     <div class="item">
-      <img src="french-pianist.png" alt="Coolish black-and-white album cover featuring a smoking old pianiste.">
+      <img src="french-pianist.jpg" alt="Coolish black-and-white album cover featuring a smoking old pianiste.">
     </div>
     <div class="item">
       <img src="Tom-C.jpg" alt="Dude from Top Gun posing in some aviator shades.">
